--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,16 +1,17 @@
-.ui.borderless.topmenu.menu {
+#topmenu {
   background-color: #f5f5f5;
   box-shadow: none;
   border: none;
 }
 
-.ui.borderless.middlemenu.menu {
+#middlemenu {
   box-shadow: none;
   border: none;
 }
 
-.footer-background {
+#footer-background {
   bcakground-color: #292929;
   height: 200px;
+  margin-top: 50px;
 }
 
